all tasks are finished

--- a/index.html
+++ b/index.html
@@ -56,22 +56,22 @@
         <form id="form-inputs">
 
             <div class="title-input">
-                <label for="titleInput">Könyv címe: </label><br>
+                <label id="titleInputLabel" for="titleInput">Könyv címe: </label><br>
                 <input type="text" name="titleInput" id="titleInput">
             </div>
 
             <div class="price-input">
-                <label for="priceInput">Könyv ára:</label><br>
-                <input type="number" name="priceInput" id="priceInput">
+                <label id="priceInputLabel" for="priceInput">Könyv ára:</label><br>
+                <input type="number" name="priceInput" id="priceInput" value="0">
             </div>
 
             <div class="size-input">
-                <label for="sizeInput">Könyv mérete (súly vagy fileméret): </label><br>
+                <label id="sizeInputLabel" for="sizeInput">Könyv mérete (súly vagy fileméret): </label><br>
                 <input type="number" name="sizeInput" id="sizeInput">
             </div>
 
             <div class="isbn-input">
-                <label for="isbnInput">Könyv ISBN kódja (13 számjegy):</label><br>
+                <label id="isbnInputLabel" for="isbnInput">Könyv ISBN kódja (13 számjegy):</label><br>
                 <input type="text" name="isbnInput" id="isbnInput">
             </div>
 
